# oop_exercise_07

./: .sconsign.dblite  CMakeLists.txt  SConstruct  test
doc/: report.doc  ~$report.doc
src/: command.cpp  command.h  document.cpp  document.h  editor.h  factory.cpp  factory.h  figure.h  main.cpp  octagon.cpp  octagon.h  quadrate.cpp  quadrate.h  triangle.cpp  triangle.h
tests/: test_00.result  test_00.test  test_01.result  test_01.test  test_02.result  test_02.test
